# lab-data-uploader

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: .dockerignore  Dockerfile  config.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/agent/: __init__.py  cli.py  dedup.py  logging_utils.py  main.py  models.py  retry.py  scanner.py  scheduler.py  state_db.py  step_functions.py  uploader.py
app/configs/: example.config.yaml
app/scripts/: install_service.ps1  install_service.sh
app/tests/: conftest.py  test_config.py  test_dedup.py  test_integration.py  test_logging.py  test_scanner.py  test_state_db.py  test_uploader.py
configs/: example.config.yaml
platform/: platform  platform.yml
platform/vars/: dev.tfvars  prod.tfvars  test.tfvars
scripts/: run_local.py
src/agent/: __main__.py  api_client.py  cli.py  completion_detector.py  config.py  manifest.py  models.py  scheduler.py  uploader.py
src/service/: __init__.py  app.py  models.py  s3_client.py  store.py
tests/: test_api_client.py  test_completion_detector.py  test_config.py  test_dedup.py  test_integration.py  test_manifest.py  test_scanner.py  test_step_functions.py  test_uploader.py
